<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/weak1"
    android:orientation="vertical">

    <android.support.design.widget.NavigationView
        android:id="@+id/nv_main_start"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_gravity="start"
        android:clickable="true"
        android:orientation="vertical"
        android:focusable="true"
        android:background="@null"
        app:menu="@menu/menu_main_drawer"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/weak2" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/main_word"
            android:drawableStart="@drawable/ic_skin_night_main_drawer_bottom"
            android:text="@string/skin_night_main_drawer_bottom" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/main_word"
            android:drawableStart="@drawable/ic_settings_main_drawer_bottom"
            android:text="@string/settings_main_drawer_bottom"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/main_word"
            android:drawableStart="@drawable/ic_quit_main_drawer_bottom"
            android:text="@string/quit_main_drawer_bottom"/>
    </LinearLayout>

</LinearLayout>